# TCG-software

./: .env.example  .gitignore  .import-linter.cfg  ANGULAR_MIGRATION_NOTE.md  CHANGELOG.md  README.md  bench_options.py  pyproject.toml  start.bat  start.sh
.github/workflows/: desktop-build.yml
.hypothesis/constants/: 00cbb9e6df7eee44  024cc26c354c6cc9  037e5b17cb16349c  06f4a30cde5f5600  084a063ca5d4acc2  096d9a652872d115  0b971f86590ead8b  11efbc266c754f7b  12699731d23c963f  148f77d972f4954e  14e3df0670e7cac2  1703a9fc3c7ef59e  1b0c364174c418dc  1c44afb5f7575b5a  1ccea875f795ff58  1d54b70edff8edcc  1ea48f5d756c0bbd  2271d710cc2d2890  22d0e2bc3dc4d2b8  2787ddc20343acfa  27ceb38e3c7078cc  292881c0680d5f78  2ede8b0035950ef1  2efee7be5e1d4ece  3052f17a13cf1f15  320be6c1d464f6d1  35b31d65597763a3  3809b2381bd25f99  38aea8598645a4a1  39dcf5a59a345b49  3ec1e1ab94a9b55d  4373526638debec3  4554abd44436ea94  474202c6aead6e8c  480d6967bb877f31  4cf9ad41f66db186  4e0615c748f3e731  4fc1abd1d969737a  622f270de094b4b7  63dcb16bcfaee43e  (+55 more)
assets/: Logo_full_Trajectoire.jpg:Zone.Identifier  Logo_only_Trajectoire.jpg:Zone.Identifier
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/sidecar/: build_sidecar.sh  tcg-backend.spec  tcg_backend.py
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
dev/: README.md  share.py
docs/: architecture.md  data-model.md  design-decisions.md  indicators.md  persistence.md  rolling.md
frontend/: package-lock.json  package.json  playwright.config.js  vite.config.js
frontend-angular/: .gitignore  README.md  angular.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend-angular/e2e/: README.md  data-settings.spec.ts  quick-check.spec.ts
frontend-angular/tools/: README.md  dev-stub-backend.py  host-coexistence-audit.sh  smoke-install.sh
frontend-react-archive/: index.html  package.json  playwright.config.js  vite.config.js
frontend-react-archive/e2e/: baskets.spec.js  continuous-rolling.spec.js  indicator-defaults.spec.js  indicators.spec.js  option-stream-progress.spec.js  signals.spec.js
scripts/: launch.ps1
sql/: tickets.sql
tests/: _hold_pnl_oracle.py  conftest.py  test_agent_prompt_size.py  test_agent_websocket.py  test_agent_workspace_session.py  test_backtester_import.py  test_backtester_metrics.py  test_backtester_signals.py
(+1014 files in other folders)
