[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcg"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.0",
    "motor>=3.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "typer>=0.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "httpx>=0.27",
    "import-linter>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live MongoDB (deselect with -m 'not integration')",
]

[tool.hatch.build.targets.wheel]
packages = ["tcg"]
