[package]
name = "tcg-desktop"
version = "0.1.7"
description = "Trajectoire CAP desktop wrapper (Tauri v2) — spawns the bundled FastAPI sidecar and shows the existing frontend."
authors = ["Trajectoire CAP"]
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri's mobile entry point / generate_context build against.
# `main.rs` is a thin shim that calls `tcg_desktop_lib::run()`.
[lib]
name = "tcg_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not
# specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
